Sonar Fixes in Utils class.